// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Snapshots matches snapshot for all sizes: button-large 1`] = `
<button
  class="btn btn--primary btn--large"
  data-testid="reusable-button"
  type="button"
>
  large
</button>
`;

exports[`Button Component Snapshots matches snapshot for all sizes: button-medium 1`] = `
<button
  class="btn btn--primary btn--medium"
  data-testid="reusable-button"
  type="button"
>
  medium
</button>
`;

exports[`Button Component Snapshots matches snapshot for all sizes: button-small 1`] = `
<button
  class="btn btn--primary btn--small"
  data-testid="reusable-button"
  type="button"
>
  small
</button>
`;

exports[`Button Component Snapshots matches snapshot for all variants: button-danger 1`] = `
<button
  class="btn btn--danger btn--medium"
  data-testid="reusable-button"
  type="button"
>
  danger
</button>
`;

exports[`Button Component Snapshots matches snapshot for all variants: button-outline 1`] = `
<button
  class="btn btn--outline btn--medium"
  data-testid="reusable-button"
  type="button"
>
  outline
</button>
`;

exports[`Button Component Snapshots matches snapshot for all variants: button-primary 1`] = `
<button
  class="btn btn--primary btn--medium"
  data-testid="reusable-button"
  type="button"
>
  primary
</button>
`;

exports[`Button Component Snapshots matches snapshot for all variants: button-secondary 1`] = `
<button
  class="btn btn--secondary btn--medium"
  data-testid="reusable-button"
  type="button"
>
  secondary
</button>
`;

exports[`Button Component Snapshots matches snapshot for default button 1`] = `
<button
  class="btn btn--primary btn--medium"
  data-testid="reusable-button"
  type="button"
>
  Default
</button>
`;
